Changed the width of enter animation bars on small screen and also reduced the size of fixed whatsapp icon

--- a/src/components/enter/Enter.css
+++ b/src/components/enter/Enter.css
@@ -1,9 +1,11 @@
 :root {
-  --bar-width: 5vw;
+  --bar-width: max(32px, 5vw);
 }
+/* @media only screen and (max-width: 750px){
+  --bar-width: 20px;
+} */
 .enter-content .right,
-.enter-content .left,
-.enter-content .top,
+.enter-content .left .enter-content .top,
 .enter-content .bottom {
   position: absolute;
   background-color: white;
